fixed description and spacing

--- a/src/Components/BadgeCard/style.css
+++ b/src/Components/BadgeCard/style.css
@@ -2,3 +2,7 @@ img {
     height: 180px;
     padding: 20px;
 }
+
+.card {
+    width: 200px;
+}
